--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -26,3 +26,11 @@
   background-size: cover;
   background-position: center;
 }
+
+.gallery {
+  display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    flex-wrap: wrap;
+}
