--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -27,10 +27,13 @@
   background-position: center;
 }
 
-.gallery {
-  display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-    flex-wrap: wrap;
+// .gallery {
+//   display: flex;
+//     justify-content: center;
+//     align-items: center;
+//     gap: 20px;
+//     flex-wrap: wrap;
+// }
+.is-hidden {
+  display: none;
 }
