--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -27,13 +27,28 @@
   background-position: center;
 }
 
+
+
+
 // .gallery {
-//   display: flex;
+//      max-width: 1140px;
+//     grid-gap: 12px;
+//     grid-template-columns: repeat(auto-fit,minmax(320px,1fr));
+//     grid-auto-rows: 240px;
 //     justify-content: center;
-//     align-items: center;
-//     gap: 20px;
-//     flex-wrap: wrap;
+//     margin-left: auto;
+//     margin-right: auto;
+//     display: grid;
 // }
+
+.gallery {
+  display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    flex-wrap: wrap;
+}
+
 .is-hidden {
   display: none;
 }
