--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -28,26 +28,13 @@
 }
 
 
-
-
 // .gallery {
-//      max-width: 1140px;
-//     grid-gap: 12px;
-//     grid-template-columns: repeat(auto-fit,minmax(320px,1fr));
-//     grid-auto-rows: 240px;
+//   display: flex;
 //     justify-content: center;
-//     margin-left: auto;
-//     margin-right: auto;
-//     display: grid;
+//     align-items: center;
+//     gap: 20px;
+//     flex-wrap: wrap;
 // }
-
-.gallery {
-  display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-    flex-wrap: wrap;
-}
 
 .is-hidden {
   display: none;
