--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -38,27 +38,27 @@
   box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
       }
 
-            .search-form input[type="text"] {
-              border: none;
-              outline: none;
-          
-              padding: 5px;
-            }
+
+.search-form input[type="text"] {
+    border: none;
+    outline: none;
+    padding: 5px;
+}
       
-            .btn {
-              background-color: #f3a1c5;
-              color: #fff;
-              border: none;
-              border-radius: 5px;
-              padding: 5px 10px;
-              margin-left: 10px;
-              cursor: pointer;
-            }
+.btn {
+  background-color: #f3a1c5;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  padding: 5px 10px;
+  margin-left: 10px;
+  cursor: pointer;
+}
       
            
-            .btn:hover {
-              background-color: #8b046a;
-            }
+.btn:hover {
+  background-color: #8b046a;
+}
 
 
 
@@ -66,7 +66,6 @@
 
 .gallery {
   display: flex;
-  justify-content: center;
   align-items: center;
   gap: 20px;
   flex-wrap: wrap;
@@ -74,13 +73,14 @@
 }
 
 .photo-card {
+  width: 310px;
   text-align: center;
 }
 
 .photo-card:hover, .photo-card:focus {
   background-color: #ffffff;
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-    border-radius: 0px 0px 4px 4px;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  border-radius: 0px 0px 4px 4px;
   }
 
 
