--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -60,10 +60,6 @@
   background-color: #8b046a;
 }
 
-
-
-
-
 .gallery {
   display: flex;
   align-items: center;
@@ -73,7 +69,7 @@
 }
 
 .photo-card {
-  width: 310px;
+  width: 100%;
   text-align: center;
 }
 
